# NovelChat

./: .env.example  .env_example  .gitignore  README.md  docker-compose.yml  feishu_bot.py  main.py  pyproject.toml  setup.sh
logs/: rag_eval_logs.jsonl
scripts/: delete_memory.py  dump_ragas_prompts.py  ragas_prompts_dump.json  read_milvus_samples.py
src/: config.py
src/agent/: main_agent.py  query_router.py
src/graphrag/: community_summarizer.py  graph_extractor.py  node_profiler.py  pipeline.py
src/ingestion/: context_injector.py  document_parser.py  milvus_indexer.py  pipeline.py  semantic_chunker.py
src/memory/: tools.py
src/novel_agentic_rag.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/novel_chat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/retrieval/: hybrid_retriever.py
src/utils/: model_factory.py  prompts.py  tracing.py
test_scripts/: parse1_bm25_smoke_test.py  parse2_smoke_test.py
